# innovationmergeblog

./: README.md
15_audioclassifier/: audioClasifierKNNEightClass.py  audioClasifierKNNGenderClass.py  audioClasifierKNNTwoClass.py  audioClasifierSVMEightClass.py  audioClasifierSVMFourClass.py  audioClasifierSVMGenderClass.py  audioClasifierSVMMusicClass.py  audioClasifierSVMTwoClass.py
16_audioFeatureExtraction/: requirements.txt.txt  shortTermFeaturesExtraction_Combined.py  shortTermFeaturesExtraction_Part1.py  shortTermFeaturesExtraction_Part2.py
17_audioSegmentation/: 01_Supervised_fixsized.py  02_Supervised_HMM.py  03_unsupervised_silenceRemoval.py  04_unsupervised_speakerDiarization.py  05_unsupervised_audioThumbnail.py
predictive_capture/: Dockerfile  README.md  mobilenet_main.py  mobilenet_main_web_cam.py  mobilenet_main_web_cam_save.py  pyproject.toml  ssd_main.py  ssd_main_web_cam.py  ssd_main_web_cam_save.py
predictive_capture/preditive_capture/: capture.py  exceptions.py  sample.py
predictive_capture/preditive_capture/tests/: __init__.py
preditive_capture/: README.md  mobilenet_main.py  pyproject.toml  ssd_main.py  tox.ini
preditive_capture/preditive_capture/: capture.py
preditive_capture/preditive_capture/logger/: __init__.py
preditive_capture/preditive_capture/tests/: test_sample.py
