[tool.poetry]
name = "preditive_capture"
version = "1.0"
description = "Auto capture of photos when object detected"
authors = ["innovationmerge"]
readme = "README.md"
packages = [{include = "preditive_capture"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tox = "^3.26.0"
click = "^8.1.3"
python-json-logger = "^2.0.4"


[tool.poetry.dev-dependencies]
pytest = "7.1.3"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
